--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <h2> Parallel single cell small RNA-seq datasets </h2>
 
     <ul>
-      <li> <a href="pbmcs/index.html"> miRNA profiles in PBMCs, sorted cells (Fig. 4b) </a> </li>
-      <li> <a href="lungcancer/index.html"> miRNA profiles in Lung cancer cells (Fig. 5b)</a> </li>
+      <li> <a href="pbmcs/index.html" target="_blank"> miRNA profiles in PBMCs, sorted cells </a> </li>
+      <li> <a href="lungcancer/index.html" target="_blank"> miRNA profiles in Lung cancer cells </a> </li>
       </ul>
 
 </body>
