modified:   index.html 	modified:   lungcancer/LungCancer/Seurat_tsne.coords.tsv.gz 	modified:   lungcancer/LungCancer/coords/coords_0/clusterLabels.json 	modified:   lungcancer/LungCancer/dataset.json 	modified:   lungcancer/LungCancer/exprMatrix.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/B.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Endothelial.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Epithelial.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Fibroblast.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Immune1268a.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Mast.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Myeloid.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/NK.tsv.gz 	modified:   lungcancer/LungCancer/markers/markers_0/Tumour.tsv.gz 	modified:   lungcancer/LungCancer/meta.index 	modified:   lungcancer/LungCancer/meta.tsv 	modified:   lungcancer/LungCancer/metaFields/Cell.bin.gz 	modified:   lungcancer/LungCancer/metaFields/Cluster.bin.gz 	modified:   lungcancer/LungCancer/metaFields/SampleOrigin.bin.gz 	modified:   lungcancer/LungCancer/metaFields/nCount_RNA.bin.gz 	modified:   lungcancer/LungCancer/metaFields/nFeature_RNA.bin.gz 	deleted:    lungcancer/LungCancer/metaFields/patient.bin.gz 	modified:   lungcancer/dataset.json 	modified:   lungcancer/index.html
	lungcancer/LungCancer/metaFields/Patients.bin.gz

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <h2> Parallel single cell small RNA-seq datasets </h2>
 
     <ul>
-      <li> <a href="pbmcs/index.html" target="_blank"> miRNA profiles in PBMCs, sorted cells </a> </li>
       <li> <a href="lungcancer/index.html" target="_blank"> miRNA profiles in Lung cancer cells </a> </li>
       </ul>
-
+    <p>presented by UCSC cell browser</p>
 </body>
 
