--- a/PSCSRII/index.html
+++ b/PSCSRII/index.html
@@ -6,8 +6,10 @@
     <h2> PSCSR-seq V2 datasets </h2>
 
     <ul>
-      <li> The miRNA-mRNA coinertia analysis between cell types: <a href="celltypeplot.html" target="_blank"> Search miRNAs;  </a> <a href="celltypeplot2.html" target="_blank"> Search mRNAs;  </a></li>
-	  <li> The miRNA-mRNA coexpression profiles of mouse lung: <a href="lung_mir/index.html" target="_blank"> Search miRNAs;  </a> <a href="lung_rna/index.html" target="_blank"> Search mRNAs;  </a></li>
+      <li> The miRNA-mRNA coinertia analysis of cultured cells: <a href="celltypeplot.html" target="_blank"> Search miRNAs;  </a> <a href="celltypeplot2.html" target="_blank"> Search mRNAs;  </a></li>
+	  <li> The miRNA-mRNA coinertia analysis of mouse lung samples: <a href="mouse_samples1.html" target="_blank"> Search miRNAs;  </a> <a href="mouse_samples2.html" target="_blank"> Search mRNAs;  </a></li>
+	  <li> The miRNA-mRNA coexpression atlas of mouse lung: <a href="lung_mir/index.html" target="_blank"> Search miRNAs;  </a> <a href="lung_rna/index.html" target="_blank"> Search mRNAs;  </a></li>
+	  
       </ul>
 
 </body>
